Mon Oct  3 000:31:09 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * docs/Purify.html:
        
          New file, documenting the use of Purify with CIAO and DAnCE.

Sun Oct  2 22:24:15 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/Config_Handlers/Basic_Deployment_Data.hpp:
        
          Added include of RT-CCM/CIAOServerResources.hpp.
          
        * tools/Config_Handlers/DP_Handler.cpp:
        
          Added export macros to friend function declarations.

Sat Oct 1 15:38:23  2005  William Otte <wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/Config_Handlers.mpc
        * tools/Config_Handlers/test.cpp
        
        Corrected the config handler test to properly test the handlers. 
        
        * tools/Config_Handlers/PSPE_Handler.cpp
        
        Fixed a run-time bug that was causing corrupted plans in Borland
        builds. 
        
Friday Sep 30 15:12:43 2005  William Otte <wotte@dre.vanderbilt.edu>

        * DAnCE/DomainApplicationManager/DomainApplicationManager.mpc
        * DAnCE/spec_RepositoryManager/spec_RepositoryManager.mpc
        * RACE/Planner_Manager/Component/Planner_Manager.mpc
        * tests/IDL3/ImpliedIDL/All/all.mpc
        * tools/Config_Handlers/RT-CCM/CIAOServerResources.cpp
        * tools/Config_Handlers/RT-CCM/CIAOServerResources.hpp

        Fixes for compile problems in Borland6
        
Fri Sep 30 15:11:47 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* NEWS

	  Updated the NEWS file.

Fri Sep 30 07:53:47 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* tools/Config_Handlers/RT-CCM/SRD_Handler.cpp

	Should have been part of the previous commit. 

Thu Sep 29 18:11:25 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp
	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp
	* ciao/Container_Impl.cpp
	* ciao/NodeApplication_Impl.cpp
	* ciao/Upgradeable_Context_Impl_T.cpp

	Fuzz errors. 
	